# Ebook_Audio

./: .gitignore  README.md  app_gui.py  notes.txt  progress_log.txt  pyproject.toml
converter/: views.py
converter/core/src/: audio_processor.py  ebook_parser.py  main.py  tts_wrapper.py
converter/templates/converter/: index.html
ebook_audiobook_project/: manage.py
ebook_audiobook_project/ebook_audiobook_project/: asgi.py  settings.py  urls.py  wsgi.py
